[package]
name = "slice_bit_operations"
version = "0.1.2"
edition = "2024"
keywords = ["no_std", "bit", "slice"]
description = "Bit Manipulation of a slice"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Pogwat/slice_bit_operations"
exclude = ["benches"]

[dependencies]
bit_operations = "0.3.1"
biter = "0.1.5"
